ghost/deploy/base/00_ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ghost
  annotations:
    workload.openshift.io/allowed: "management"
  labels:
    openshift.io/cluster-monitoring: "false"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
