ghost/deploy/base/01_db_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-db
  labels:
    app: ghost
spec:
  selector:
    matchLabels:
      app: ghost
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ghost
        tier: db
    spec:
      containers:
      - image: mysql:8.0.32
        securityContext:
          privileged: false
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: db-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: db-persistent-storage
        persistentVolumeClaim:
          claimName: db-pvc
