ghost/deploy/base/01_db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: ghost
spec:
  ports:
  - port: 3306
  selector:
    app: ghost
    tier: db
  clusterIP: None
