ghost/deploy/base/02_web_route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: web-route
spec:
  to:
    kind: Service
    name: web
    weight: 100
  port:
    targetPort: 2368
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
